# 3D-Game

./: .gitignore  Cargo.toml  README.md
Devlogs/: Devlogs.md
Journals/: Journal.md
Showcases/: Showcases.md
assets/Player/: license.txt
assets/shaders/: health_bar.wgsl  jump_indicator.wgsl  muzzle_flash.wgsl
src/: main.rs
