[package]
name = "clicker_game"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.6.1"
bevy = { version = "*", features = ["jpeg", "custom_cursor"] }
bevy_animation = "0.18.1"
bevy_embedded_assets = "0.15.0"
bevy_hanabi = "0.18.0"
include_dir = "0.7.4"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.10.1"
